# ndarray_safetensors

./: .gitignore  CHANGELOG  Cargo.toml  LICENSE  README.md
.github/workflows/: rust_unsafe_copy.yml  rust_x86_sse.yml
data/: from_rust.safetensors  rand.safetensors  rand16.safetensors
ndarray-safetensors/: Cargo.toml
ndarray-safetensors/src/: element.rs  lib.rs  tests.rs  x86_sse.rs
py-utils/: read_tensors.py
safetensors-testapp/: Cargo.toml
safetensors-testapp/src/: main.rs
