[package]
name = "ndarray-safetensors"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Serialize / deserialize ndarrays with safetensors."
homepage = "https://github.com/linmx0130/ndarray_safetensors"
repository = "https://github.com/linmx0130/ndarray_safetensors"
readme = "../README.md"
keywords = ["safetensors", "ndarray", "tensors", "array", "serialization"]


[dependencies]
ndarray = "0.16.1"
safetensors = "0.4.5"

[dev-dependencies]
assert_approx_eq = "1.0"